# flutter_zoom

./: .gitignore
zoom/: README.md  pubspec.yaml
zoom/macos/: zoom.podspec
zoom/macos/Classes/: SwiftZoomPlugin.swift  ZoomPlugin.h
zoom/windows/: .gitignore  CMakeLists.txt  zoom_plugin.cpp
zoom/windows/include/zoom/: zoom_plugin.h
